# monitoring_system

./: Caddyfile  README.md  docker-compose.yaml
backend/: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.collector
backend/.sqlx/: query-07786036aec463a64496061577dc6bb27522046303d8b170d24470e1b572829a.json  query-0b0a718e3d8bc8992bd541179fcb0bd4efe0545b1816b5b79256647f974f9239.json  query-10306eac03a90cb2d20e4512c2f264d147017ee0ccde61df15d2269ca7e3c9b9.json  query-10d7b6ed27b5e74306a84f3fe6123c239fd25abe55f8497fc5c5a57c089660a5.json  query-12da4d6f67225fb775a1b4e88f3dbb5f44cb6b553de0726da5530f56dfa7a850.json  query-24c2951cc7da84c69326f230c2bb60c3f6c139dc4c226eceea38684d839c8527.json  query-29155044505737fed95aa2e3a7668f1217827ab53b7bfa57a543dbe9f9861ec1.json  query-29457f754dc7f08a787706ea26f2d20bd633195c634aec04b8b734ccfe9eafb1.json  query-2edac0bb6da4110e0ff38a931f1c6c4de12545d6f604dbd8588d8a835653943c.json  (+23 more)
backend/crates/api_server/: Cargo.toml
backend/crates/api_server/src/: main.rs  ws.rs
backend/crates/api_server/src/db/: collector.rs  endpoints.rs  endpoints_results.rs  metrics.rs  mod.rs  models.rs  notifications.rs  ports.rs  thresholds.rs
backend/crates/api_server/src/db/collector/: endpoints.rs  endpoints_results.rs  metrics.rs  mod.rs  notifications.rs  thresholds.rs
backend/crates/api_server/src/endpoints/: collectors.rs  metrics.rs  mod.rs  notifications.rs  ws.rs
backend/crates/api_server/src/handlers/: api_docs.rs  collectors.rs  metrics.rs  mod.rs  notifications.rs  ports.rs  thresholds.rs  ws.rs
backend/crates/api_server/src/notifications/: endpoints.rs  metrics.rs  mod.rs  ports.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: env.rs  error.rs  lib.rs  metrics.rs  structs.rs
backend/crates/shared/src/enums/: error.rs  metric_type.rs  mod.rs
backend/crates/shared/src/structs/: collector.rs  collector_config.rs  collector_info.rs  db.rs  disk.rs  endpoints.rs  metric_type_enum.rs  metrics.rs  mod.rs  netword_interface.rs  notifications.rs  partial_metrics.rs  ports.rs  thresholds.rs  unidentified_collector.rs
backend/crates/shared/src/structs/collectors/: collector.rs  collector_config.rs  drive.rs  mod.rs  network_interface.rs  unidentified_collector.rs
backend/crates/shared/src/structs/db/: collector.rs  metric_type.rs  metrics.rs  mod.rs  tables.rs
backend/crates/shared/src/traits/: mod.rs
backend/migrations/: 20260314101531_init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+8 more)
(+69 files in other folders)
