[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
collector = { path = "../collector/" }
actix-web = "4.13.0"
log = "0.4.29"
actix-cors = "0.7.1"
actix-ws = "0.4.0"
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
shared = { path = "../shared/" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
